# ariadne

./: .clang-format  .dockerignore  .gdb_history  .gitignore  .hadolint.yaml  Dockerfile  LICENSE  README.md
scripts/: setup-dev-env.sh
src/launch/ariadne_launch/: CMakeLists.txt  package.xml
src/launch/ariadne_launch/config/: foxglove.params.yaml
src/launch/ariadne_launch/launch/: ariadne.launch.py
src/launch/orb_pilot_launch/: CMakeLists.txt  package.xml
src/launch/orb_pilot_launch/launch/: orb_pilot.launch.py
src/vslam/: CMakeLists.txt  package.xml
src/vslam/cmake_modules/: FindG2O.cmake
src/vslam/config/: vslam_params.yaml
src/vslam/include/vslam/: camera_utils.hpp  utils.hpp  vslam.hpp
src/vslam/include/vslam/mapping/: local_mapper.hpp  map.hpp  map_point.hpp
src/vslam/include/vslam/optimization/: optimizer.hpp
src/vslam/include/vslam/tools/: feature_plot.hpp  tum_rosbag.hpp
src/vslam/include/vslam/tracking/: feature_extractor.hpp  feature_matcher.hpp  frame.hpp  key_frame.hpp  tracker.hpp
src/vslam/include/vslam/visualization/: canvas.hpp
src/vslam/launch/: vslam.launch.py
src/vslam/src/: utils.cpp  vslam.cpp  vslam_node.cpp
src/vslam/src/mapping/: local_mapper.cpp  map.cpp  map_point.cpp
src/vslam/src/optimization/: optimizer.cpp
src/vslam/src/tools/: feature_plot.cpp  tum_rosbag.cpp
src/vslam/src/tracking/: feature_extractor.cpp  feature_matcher.cpp  frame.cpp  key_frame.cpp  tracker.cpp
src/vslam/src/visualization/: canvas.cpp
vslam/: CMakeLists.txt  package.xml
vslam/config/: foxglove_params.yaml  vslam_params.yaml
vslam/include/cuda_vslam_ros/: tum_node.hpp  vslam.hpp
vslam/include/cuda_vslam_ros/tools/: feature_plot.hpp  tum_bag_generator.hpp
vslam/include/cuda_vslam_ros/tracking/: feature_extractor.hpp
vslam/launch/: foxglove.launch.py  vslam.launch.py  vslam_foxglove.launch.py  vslam_launch.py
vslam/src/: tum_node.cpp  vslam.cpp  vslam_node.cpp
vslam/src/tools/: feature_plot.cpp  tum_bag_generator.cpp
vslam/src/tracking/: feature_extractor.cpp
