<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuda_vslam_ros</name>
  <version>0.0.0</version>
  <description>
      This package provides a hardware-accelerated ORB-SLAM2 implementation with multi-map support for RGB-D cameras
  </description>
  <maintainer email="cheranm@outlook.com">Cheran Mahalingam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
