<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuda_vslam_ros</name>
  <version>0.0.0</version>
  <description>
      This package provides a hardware-accelerated ORB-SLAM2 implementation with multi-map support for RGB-D cameras
  </description>
  <maintainer email="cheranm@outlook.com">Cheran Mahalingam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>foxglove_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>foxglove_bridge</depend>
  <depend>message_filters</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
